<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_screen_old"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mapLayout"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="1"
            android:visibility="invisible"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:textColor="@color/white"
                android:id="@+id/pauseButton"
                android:background="@color/dark_grey"
                android:layout_weight="0.5"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:id="@+id/stopButton"
                android:layout_weight="0.5"
                android:background="@color/red"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/startAndStopLayout"
            android:weightSum="1"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_wait"
                android:textColor="@color/white"
                android:id="@+id/startedButton"
                android:background="@color/light_grey"
                android:layout_weight="0.5"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"/>

        </LinearLayout>


    </RelativeLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="#4CFFFFFF"
        android:paddingBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:id="@+id/distanceTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/distance_placeholder"
                android:id="@+id/distanceValue" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:id="@+id/timeTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/time_placeholder"
                android:id="@+id/timeValue" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/best_speed"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:id="@+id/speedTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_placeholder"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/speedValue" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/actual_speed"
                android:id="@+id/actualSpeedTextView"
                android:textSize="12sp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_placeholder"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/actualSpeedValue" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>